# MikaLendingBot

./: .buildinfo  .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  config_sample.toml  configuration.html  contributing.html  coverage_baseline.txt  default.cfg.example  docker-compose.yaml  genindex.html  index.html  installation.html  lendingbot_legacy.py  main.py  market_analysis.html  mod.patch  objects.inv  pyproject.toml  requirements-dev.txt  search.html  searchindex.js
.github/workflows/: deploy_docs.yml
_sources/: configuration.rst.txt  installation.rst.txt
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/config_rearch_di_20260105/: spec.md
conductor/archive/coverage_improvement_20251228/: spec.md
conductor/archive/coverage_improvement_20251230/: plan.md  refactor_plan_data.md  refactor_plan_lending.md
conductor/archive/coverage_refactor_20260106/: plan.md  spec.md
conductor/archive/docs_config_update_20260125/: plan.md
conductor/archive/english_docs_20251228/: plan.md  spec.md
conductor/archive/foundation_migration_20251228/: plan.md  spec.md
conductor/archive/full_migration_20251228/: spec.md
conductor/archive/market_analysis_docs_restoration_20260125/: spec.md
conductor/tracks/config_rearch_di_20260105/: plan.md
conductor/tracks/coverage_improvement_20251228/: plan.md
conductor/tracks/coverage_improvement_20251230/: plan.md  spec.md
conductor/tracks/coverage_refactor_20260106/: plan.md
conductor/tracks/docs_config_update_20260125/: index.md  spec.md
conductor/tracks/fix_tests_di_20260105/: plan.md  spec.md
conductor/tracks/foundation_migration_20251228/: plan.md
conductor/tracks/full_migration_20251228/: plan.md
conductor/tracks/market_analysis_docs_restoration_20260125/: index.md  plan.md
conductor/tracks/modernization_idioms_20251230/: plan.md  spec.md
conductor/tracks/modernization_logic_recovery_20251228/: plan.md  spec.md
conductor/tracks/strategy_selection_20260103/: plan.md  spec.md
docs/: MIGRATION_GUIDE2.md  README.md  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  market_analysis.rst  migration_guide.md
docs/dev/: TEST_MIGRATION_PLAN.md  code_coverage_report.md  config_docs_update_plan.md  config_validation_rules.md  configuration_architecture.md  migration_guide.md  migration_plan_src.md
docs/dev/config_rearch/: config_implementation_plan.md  config_restoration_plan.md  config_validation_rules.md
modules/: Bitfinex2Poloniex.py  Data.py  ExchangeApi.py  ExchangeApiFactory.py  MarketAnalysis.py  MaxToLend.py  PluginsManager.py  Poloniex.py  WebServer.py
plugins/: AccountStats.py  Charts.py  Plugin.py  __init__.py
src/lendingbot/: __init__.py  main.py
src/lendingbot/modules/: Bitfinex.py  Bitfinex2Poloniex.py  Configuration.py  Configuration_old.py  ConsoleUtils.py  Data.py  ExchangeApi.py  ExchangeApiFactory.py  Lending.py  Logger.py  MarketAnalysis.py  MaxToLend.py  Notify.py  Orchestrator.py  PluginsManager.py  Poloniex.py  RingBuffer.py  Utils.py  WebServer.py  __init__.py
src/lendingbot/plugins/: AccountStats.py  Charts.py  Plugin.py  __init__.py
tests/: conftest.py  test_AccountStats.py  test_Bitfinex.py  test_Bitfinex2Poloniex.py  test_BitfinexAPI.py  test_Bitfinex_core.py  test_Charts.py  test_Configuration.py  test_Configuration_modern.py  test_Configuration_old.py  test_Configuration_old_strategy.py  test_Configuration_strategy.py  test_ConsoleUtils.py  test_Data.py  test_Data_core.py  test_Data_modern.py  test_Lending.py  test_LendingEngine.py  test_LendingEngine_new.py  test_Lending_comprehensive.py  test_Lending_core.py  test_Lending_precedence.py  test_Lending_strategy.py  test_Logger.py  test_MarketAnalysis.py  test_MaxToLend.py  test_Notify.py  test_Orchestrator.py  test_Persistence.py  test_PluginsManager.py  test_PoloniexAPI.py  test_Poloniex_core.py  test_RingBuffer.py  test_Utils.py  test_WebServer.py
tests/integration/: __init__.py  conftest.py  test_bitfinex_api.py  test_full_cycle.py  test_poloniex_api.py
www/: charts.html  lendingbot.html  lendingbot.js
